--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+body {
+  font-size: 1.1rem;
+}
+
 .base-yellow {
   color: #ff8500 !important;
 }
@@ -103,7 +107,7 @@
 }
 
 .title-spec {
-  font-family: "Allerta Stencil", sans-serif;
+  font-family: "Allerta Stencil", Nunito;
   line-height: 0.9;
 }
 
