--- a/css/style.css
+++ b/css/style.css
@@ -103,7 +103,7 @@ body {
       rgba(22, 22, 22, 0.5) 100%
     ),
     linear-gradient(to top, rgba(22, 22, 22, 1) 1%, rgba(22, 22, 22, 0.5) 15%),
-    url("http://amadaxtreme.com/wp-content/uploads/2018/11/AX003.jpg") !important;
+    url("../img/AX003.jpg") !important;
 }
 
 .title-spec {
