--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,7 @@ body {
 }
 
 .about-section {
-  padding-top: 5em !important;
+  padding-top: 3em !important;
   background-image: linear-gradient(
       to bottom,
       rgba(22, 22, 22, 1) 10%,
@@ -107,12 +107,12 @@ body {
 }
 
 .title-spec {
-  font-family: "Allerta Stencil", Nunito;
+  font-family: "Roboto condensed";
   line-height: 0.9;
 }
 
 .projects-section {
-  padding: 0 !important;
+  padding-top: 3em !important;
 }
 
 .bg-light {
