--- a/css/style.css
+++ b/css/style.css
@@ -125,3 +125,22 @@ body {
 .cover {
   height: 90vh;
 }
+
+.fab {
+  padding: 12px;
+  font-size: 16px;
+  width: 40px;
+  text-align: center;
+  text-decoration: none;
+  margin: 2px 2px;
+  border-radius: 50%;
+}
+
+.fab:hover {
+  opacity: 0.7;
+}
+
+.fa-facebook-f {
+  background: #3b5998 !important;
+  color: white !important;
+}
