--- a/css/style.css
+++ b/css/style.css
@@ -144,3 +144,15 @@ body {
   background: #3b5998 !important;
   color: white !important;
 }
+
+.currency:after {
+  content: " ₮";
+  font-size: 0.8em;
+  vertical-align: top;
+}
+
+.currency {
+  font-size: 1.2em;
+  font-weight: bold;
+  line-height: 2em;
+}
