--- a/template.mustache
+++ b/template.mustache
@@ -17,7 +17,7 @@
             <div class="col-md-6">
               <div class="row">
                 <div class="col-md-5">
-                  <img alt="Bootstrap Image Preview" src="https://www.radflo.com/images/F875.png" class="img-fluid" />
+                  <img alt="Bootstrap Image Preview" src="./img/catalog/{{mainImage}}/front/a.png" class="img-fluid" />
                 </div>
                 <div class="col-md-7 text-left">
                   <h6 class="text-uppercase font-weight-bold">
@@ -34,7 +34,7 @@
               <div class="row">
                 <div class="col-md-5">
                   <img alt="Bootstrap Image Preview"
-                    src="https://turn5.scene7.com/is/image/Turn5/T543273?obj=car&wid=1200&hei=900&sharpen=1"
+                    src="./img/catalog/{{mainImage}}/front/b.png"
                     class="img-fluid" />
                 </div>
                 <div class="col-md-7 text-left">
