product json file link added for test

--- a/template.mustache
+++ b/template.mustache
@@ -106,6 +106,9 @@
             <li class="list-item">
               Тайлбар: {{detail}}
             </li>
+            <li class="list-item">
+              <a href="https://amadaxtreme.mn/product.json">бүтээгдэхүүн</a>
+            </li>
           </ul>
         </div>
       </div>
