logo moved down

--- a/template.mustache
+++ b/template.mustache
@@ -74,7 +74,7 @@
                 <div class="col-md-5">
                   <img alt="Bootstrap Image Preview"
                     src="https://turn5.scene7.com/is/image/Turn5/T543273?obj=car&wid=1200&hei=900&sharpen=1"
-                    class="img-fluid" />
+                    class="img-fluid align-self-end" />
                 </div>
                 <div class="col-md-7 text-left">
                   <h6 class="text-uppercase font-weight-bold">
