--- a/template.mustache
+++ b/template.mustache
@@ -2,7 +2,7 @@
   <div class="row cover text-center align-items-center p-5">
     <div class="row mx-5 px-5">
       <div class="col-md-8">
-        <img alt="Bootstrap Image Preview" src="./img/catalog/{{mainImage}}/{{mainImage}}.jpg" class="img-fluid" />
+        <img alt="Bootstrap Image Preview" src="./img/catalog/hitodrol/{{mainImage}}.png" class="img-fluid" />
       </div>
       <div class="col-md-4 align-self-end">
         <img id="brand-logo" class="img-fluid" src="https://www.freeiconspng.com/uploads/toyota-logo-png-11.png" alt=""
