--- a/template.mustache
+++ b/template.mustache
@@ -9,16 +9,16 @@
         <p class="card-text">
           <ul class="list-unstyled" style="font-size: 15px;">
             <li class="list-item">
-              Үйлдвлэгч: <span class="text-uppercase">{{make}}</span>
+              Үйлдвлэгч: <span class="text-uppercase font-weight-bolder">{{make}}</span>
             </li>
             <li class="list-item">
-              Загвар: {{model}}
+              Загвар: <span class="font-weight-bolder">{{model}}</span>
             </li>
             <li class="list-item">
-              Хамрах он: {{year}}
+              Хамрах он: <span class="font-weight-bolder">{{year}}</span>
             </li>
             <li class="list-item">
-              Тайлбар: {{detail}}
+              Тайлбар: <span class="font-weight-bolder">{{detail}}</span>
             </li>
           </ul>
         </p>
@@ -32,10 +32,10 @@
     <div class="row px-5">
       <div class="col-md-6">
         <div class="row">
-          <div class="col-md-4">
+          <div class="col-md-5">
             <img alt="amadaxtreme амортизатор" src="./img/catalog/adventure series.png" class="img-fluid" />
           </div>
-          <div class="col-md-8 text-left">
+          <div class="col-md-7 text-left">
             <h6 class="text-uppercase font-weight-bold">
               Урд
             </h6>
@@ -48,10 +48,10 @@
       </div>
       <div class="col-md-6">
         <div class="row">
-          <div class="col-md-4">
+          <div class="col-md-5">
             <img alt="amadaxtreme амортизатор" src="./img/catalog/adventure series.png" class="img-fluid" />
           </div>
-          <div class="col-md-8 text-left">
+          <div class="col-md-7 text-left">
             <h6 class="text-uppercase font-weight-bold">
               Хойд
             </h6>
